nova_tests/negative_capability/selective_import_alias_combo_rejected.nv
// EXPECT_COMPILE_ERROR cannot combine `import X.{A, B}` with `as` alias
//
// Plan 35 sub-plan 35.A R26: `import X.{A, B} as Alias` mutual exclusion —
// per-item alias надо использовать: `import X.{A as Aliased, B}`.

module nova_tests.negative_capability.selective_import_alias_combo_rejected

import std.collections.range.{Range, RangeIter} as RangeMod

test "selective + top-level alias rejected (negative)" {
    assert(true)
}
